--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "Jeevika",
   "license": "ISC",
   "dependencies": {
+    "backend": "file:",
     "express": "^4.19.2",
     "mongoose": "^8.5.2",
     "zod": "^3.23.8"
